syntax = "proto3";

package scheduler;

option go_package = "internal/grpc/schedulerpb";

service Scheduler {
  
  rpc Heartbeat(HeartbeatRequest) returns (Ack);
  rpc ReportResult(JobResultRequest) returns (Ack);
}

message HeartbeatRequest {
  string job_id     = 1;
  string app_id     = 2;
  string worker_id  = 3;
  int64  progress   = 4; 
  int64  timestamp  = 5; 
}

message JobResultRequest {
  string job_id     = 1;
  string app_id     = 2;
  string worker_id  = 3;

  JobResultStatus status = 4;
  string error_message   = 5;
  string stacktrace      = 6;

  int64 timestamp = 7;
}

enum JobResultStatus {
  JOB_RESULT_UNKNOWN = 0;
  JOB_RESULT_SUCCESS = 1;
  JOB_RESULT_FAILED  = 2;
}

message Ack {
  bool ok = 1;
}